# Sy2CPP

./: .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  README.md
.github/workflows/: cmake.yml
src/: AstPrinter.cpp  AstPrinter.h  CMakeLists.txt  Sy2CPP.cpp  Sy2CPP.h  SyGuSv21.g4  SymbolTable.cpp  SymbolTable.h  ast.cpp  ast.h  exceptions.cpp  exceptions.h  general_utility.cpp  general_utility.h  main.cpp  resolvers.cpp  resolvers.h  symbol_table.cpp  symbol_table.h  symbol_table_ast_builder.cpp  symbol_table_ast_builder.h  typing.cpp  typing.h  utils.cpp  utils.h
src/cmake/: ExternalAntlr4Cpp.cmake
src/exceptions/: IOException.cpp  IOException.h  UnknownSymbol.cpp  UnknownSymbol.h  not_implemented.cpp  not_implemented.h  typing_error.cpp  typing_error.h  unsupported_feature.cpp  unsupported_feature.h  wrong_arguments.cpp  wrong_arguments.h
src/parsing/: AstPrinter.cpp  AstPrinter.h  SyGuSv21.g4  SymbolTable.cpp  SymbolTable.h  ast.cpp  ast.h  resolvers.cpp  resolvers.h  symbol_table.cpp  symbol_table.h  to_string_printer.cpp  to_string_printer.h
src/utils/: IOHelpers.cpp  IOHelpers.h  general_utility.h
src/verification/: sygus_smt_rep.cpp  sygus_smt_rep.h
test/: diff.sl
test/BV/: CrCy_1-P5_1-P5.sl  CrCy_3-P7_3-P7.sl  CrCy_6-P10-D9-sIn2.sl  LinExpr_eq1ex.sl  array_search_2.sl  array_search_2.sl.cvc5.out  array_search_4.sl  array_search_4.sl.cvc5.out  array_sum_2_5.sl  array_sum_2_5.sl.cvc5.out  array_sum_4_15.sl  array_sum_4_15.sl.cvc5.out  avg-opt-new.eqn_sygus_iter_59_4.sl.cvc5-nosi.out  avg-opt-new.eqn_sygus_iter_59_4.sl.cvc5.out  avg-opt-old.eqn_sygus_iter_39_1.sl.cvc5-nosi.out  avg-opt-old.eqn_sygus_iter_39_1.sl.cvc5.out  avg-opt-old.eqn_sygus_iter_53_1.sl.cvc5-nosi.out  avg-opt-old.eqn_sygus_iter_53_1.sl.cvc5.out  avg-opt-old.eqn_sygus_iter_88_1.sl.cvc5-nosi.out  avg-opt-old.eqn_sygus_iter_88_1.sl.cvc5.out  avg-opt-old.eqn_sygus_iter_93_3.sl.cvc5-nosi.out  avg-opt-old.eqn_sygus_iter_93_3.sl.cvc5.out  avg-opt.eqn_sygus_iter_32_1.sl.cvc5.out  avg-opt.eqn_sygus_iter_43_3.sl.cvc5.out  avg-opt.eqn_sygus_iter_72_1.sl.cvc5-nosi.out  avg-opt.eqn_sygus_iter_72_1.sl.cvc5.out  avg-opt.eqn_sygus_iter_87_2.sl.cvc5-nosi.out  avg-opt.eqn_sygus_iter_87_2.sl.cvc5.out  avg-opt.eqn_sygus_iter_8_2.sl.cvc5-nosi.out  avg-opt.eqn_sygus_iter_8_2.sl.cvc5.out  avg-opt.eqn_sygus_iter_93_3.sl.cvc5-nosi.out  avg-opt.eqn_sygus_iter_93_3.sl.cvc5.out  btr-am-base-index-scale-disp-solution-0.sl  btr-am-base-index-scale-disp-solution-1.sl  btr-am-base-index-scale-disp-solution-2.sl  btr-am-base-index-scale-disp-solution-3.sl  btr-am-base-index-scale-disp-solution-4.sl  btr-am-base-index-scale-disp-solution-5.sl  btr-am-base-index-scale-disp-solution-6.sl  btr-am-base-index-solution-0.sl  (+937 more)
test/LIA/: MPwL_d1s3.sl.cvc5-nosi.out  MPwL_d1s3.sl.cvc5.out  MPwL_d1s7.sl.cvc5-nosi.out  MPwL_d1s7.sl.cvc5.out  MPwL_d4s3.sl.cvc5-nosi.out  MPwL_d4s3.sl.cvc5.out  MPwL_d4s7.sl.cvc5-nosi.out  MPwL_d4s7.sl.cvc5.out  MPwL_d5s3.sl.cvc5-nosi.out  MPwL_d5s3.sl.cvc5.out  MPwoL_d1s3.sl.cvc5-nosi.out  MPwoL_d1s3.sl.cvc5.out  MPwoL_d1s7.sl.cvc5-nosi.out  MPwoL_d1s7.sl.cvc5.out  MPwoL_d4s3.sl.cvc5-nosi.out  MPwoL_d4s3.sl.cvc5.out  MPwoL_d4s7.sl.cvc5-nosi.out  MPwoL_d4s7.sl.cvc5.out  MPwoL_d5s3.sl.cvc5-nosi.out  MPwoL_d5s3.sl.cvc5.out  array_search_10.sl.cvc5.out  array_search_11.sl.cvc5.out  array_search_12.sl.cvc5.out  array_search_13.sl.cvc5.out  array_search_14.sl.cvc5.out  array_search_15.sl.cvc5.out  array_search_2.sl.cvc5-nosi.out  array_search_2.sl.cvc5.out  array_search_3.sl.cvc5.out  commutative.sl.cvc5-nosi.out  commutative.sl.cvc5.out  constant.sl.cvc5-nosi.out  constant.sl.cvc5.out  inv_gen_array.sl.cvc5-nosi.out  inv_gen_array.sl.cvc5.out  inv_gen_cegar2.sl.cvc5-nosi.out  inv_gen_cegar2.sl.cvc5.out  inv_gen_cgr1.sl.cvc5-nosi.out  inv_gen_cgr1.sl.cvc5.out  inv_gen_ex14.sl.cvc5-nosi.out  (+149 more)
test/prof/: diff.sl  jmbl_fg_max2.sl  jmbl_fg_mpg_plane1.sl  large.sl  unbdd_inv_gen_cgr1.sl  unbdd_inv_gen_fig6.sl  unbdd_inv_gen_sum3.sl
test/small/: MPwL_d1s3.sl  t11.sl  t20.sl  t3.sl  unbdd_inv_gen_ex23.sl  unbdd_inv_gen_trex2.sl
test/src/: overall_parsing_test.cpp
test/test/: diff.sl  inv_gen_fig6.sl  jmbl_fg_VC22_a.sl  simple.sy
